--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -2,26 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Trinity Creator by RStijn" Height="439.975" Width="603">
-    <TabControl>
-        <TabItem Header="Weapon">
-            <ScrollViewer>
-                <StackPanel Background="#fff" >
-                    <GroupBox Header="Item Details" Margin="10,10,10,0" VerticalAlignment="Top" Height="112"/>
-                    <GroupBox Header="Item Details" Margin="10,10,10,0" VerticalAlignment="Top" Height="112"/>
-                    <GroupBox Header="Item Preview" Margin="10,10,10,0" VerticalAlignment="Top" Height="112"/>
-                </StackPanel>
-            </ScrollViewer>
-        </TabItem>
-        <TabItem Header="Armor">
-            <Grid Background="#fff"/>
-        </TabItem>
-        <TabItem Header="Creature">
-            <Grid Background="#fff"/>
-        </TabItem>
-        <TabItem Header="More...">
-            <Grid Background="#fff">
-                <Label Content="Coming soon..." />
-            </Grid>
-        </TabItem>
+    <TabControl x:Name="tabControl">
+        <TabItem Header="Armor &amp; Weapons" Name="armorWeaponsTab"/>
+        <TabItem Header="Creature" />
+        <TabItem Header="More..." />
     </TabControl>
 </Window>
