--- a/TrinityCreator/ItemPage.xaml
+++ b/TrinityCreator/ItemPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TrinityCreator.ArmorWeaponPage"
+﻿<UserControl x:Class="TrinityCreator.ItemPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,23 +10,23 @@
             <StackPanel Margin="0,0,385,0">
                 <GroupBox Header="Item Details">
                     <Grid>
-                       
-                        <Label FontSize="12" Content="Item Name" Height="30" Margin="0,31,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
-                        <TextBox x:Name="itemNameTxt" Height="25" Margin="85,33,9,0" VerticalAlignment="Top" TextChanged="itemNameTxt_TextChanged"/>
 
-                        <Label FontSize="12" Content="Item Quote" Height="30" Margin="0,62,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
-                        <TextBox x:Name="itemQuoteTxt" Height="25" Margin="85,63,9,0" VerticalAlignment="Top" TextChanged="itemQuoteTxt_TextChanged"/>
+                        <Label FontSize="12" Content="Item Name" Height="30" Margin="0,1,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
+                        <TextBox x:Name="itemNameTxt" Height="25" Margin="85,3,9,0" VerticalAlignment="Top" TextChanged="itemNameTxt_TextChanged"/>
 
-                        <Label FontSize="12" Content="Quality" Height="30" Margin="0,91,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
-                        <ComboBox x:Name="itemQualityCb" Height="25" Margin="85,93,9,0" VerticalAlignment="Top" SelectionChanged="itemQualityCb_SelectionChanged" IsReadOnly="True"/>
+                        <Label FontSize="12" Content="Item Quote" Height="30" Margin="0,32,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
+                        <TextBox x:Name="itemQuoteTxt" Height="25" Margin="85,33,9,0" VerticalAlignment="Top" TextChanged="itemQuoteTxt_TextChanged"/>
+
+                        <Label FontSize="12" Content="Quality" Height="30" Margin="0,61,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
+                        <ComboBox x:Name="itemQualityCb" Height="25" Margin="85,63,9,0" VerticalAlignment="Top" SelectionChanged="itemQualityCb_SelectionChanged" IsReadOnly="True"/>
 
 
-                        <Label FontSize="12" Content="Display ID" Height="30" Margin="0,122,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
-                        <TextBox x:Name="displayIdTxt" Height="25" Margin="85,123,85,0" VerticalAlignment="Top"/>
-                        <Button x:Name="findDisplayIdBtn" Content="Find" HorizontalAlignment="Right" Margin="0,123,10,0" VerticalAlignment="Top" Width="70" Height="25" IsEnabled="False"/>
+                        <Label FontSize="12" Content="Display ID" Height="30" Margin="0,92,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
+                        <TextBox x:Name="displayIdTxt" Height="25" Margin="85,93,85,0" VerticalAlignment="Top"/>
+                        <Button x:Name="findDisplayIdBtn" Content="Find" HorizontalAlignment="Right" Margin="0,93,10,0" VerticalAlignment="Top" Width="70" Height="25" IsEnabled="False"/>
 
-                        <Label FontSize="12" Content="Item Type" Height="30" Margin="0,152,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
-                        <ComboBox x:Name="itemTypeCb" Height="25" Margin="85,153,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectedIndex="0" SelectionChanged="itemTypeCb_SelectionChanged">
+                        <Label FontSize="12" Content="Item Type" Height="30" Margin="0,122,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
+                        <ComboBox x:Name="itemTypeCb" Height="25" Margin="85,123,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectedIndex="0" SelectionChanged="itemTypeCb_SelectionChanged">
                             <ComboBoxItem Content="Weapon"/>
                             <ComboBoxItem Content="Armor"/>
                         </ComboBox>
