--- a/TrinityCreator/ItemPreview.xaml
+++ b/TrinityCreator/ItemPreview.xaml
@@ -10,7 +10,7 @@
         <StackPanel Margin="10,5">
             <Label Name="itemNameLbl" Content="Item Name" Foreground="Gray" FontSize="18"/>
             <Label Name="itemBoundsLbl" Content="BoP/BoE/BoU" Foreground="White" FontSize="14" />
-            <DockPanel Margin="0,-10,0,0">
+            <DockPanel>
                 <Label Name="subclassLeftNoteLbl" Content="One-handed" Foreground="White" FontSize="14" HorizontalAlignment="Left"/>
                 <Label Name="subclassRightNoteLbl" Content="Mace" Foreground="White" FontSize="14" HorizontalAlignment="Right"/>
             </DockPanel>
