--- a/TrinityCreator/ItemPage.xaml
+++ b/TrinityCreator/ItemPage.xaml
@@ -67,10 +67,14 @@
 
                     </Grid>
                 </GroupBox>
-                <GroupBox x:Name="equipmentBox" Header="Equipment Properties">
+                <GroupBox x:Name="equipmentBox" Header="Equipment Properties" Height="121">
                     <Grid>
                         <Label FontSize="12" Content="Level required" Height="30" Margin="0,5,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="84"/>
                         <TextBox x:Name="itemPlayerLevelTxt" Height="25" Margin="85,6,9,0" VerticalAlignment="Top" TextChanged="itemPlayerLevelTxt_TextChanged" />
+
+                        <Label FontSize="12" Content="Item Level" Height="30" Margin="0,36,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="84"/>
+                        <TextBox x:Name="itemILevelTxt" Height="25" Margin="85,37,87,0" VerticalAlignment="Top" TextChanged="itemPlayerLevelTxt_TextChanged" />
+                        <Button x:Name="findIlevelBtn" FontSize="12" Content="Find" Height="25" Margin="0,37,11,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="70" Click="findIlevelBtn_Click"/>
 
                     </Grid>
                 </GroupBox>
